fix(gux-dropdown-v2): fixed selected item overflow
fixed selected item overflow

COMUI-765

(cherry picked from commit 562553b3e012f4b2570f6414a25ec134bf954a45)

--- a/src/components/beta/gux-dropdown-v2/gux-dropdown-v2.less
+++ b/src/components/beta/gux-dropdown-v2/gux-dropdown-v2.less
@@ -46,12 +46,13 @@
 
   .gux-field-button-content {
     display: flex;
+    flex: 1 1 0;
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: stretch;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 100%;
+    min-width: 0;
     height: 100%;
 
     .gux-filter,
